--- a/pom.xml
+++ b/pom.xml
@@ -41,5 +41,10 @@
 			<artifactId>opencsv</artifactId>
 			<version>5.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>0.15</version>
+		</dependency>
 	</dependencies>
 </project>
